cncamp/cloudnative/modules/module12/workloadEntry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: details-svc
spec:
  hosts:
    - details.bookinfo.com
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: details-legacy
